--- a/package.json
+++ b/package.json
@@ -23,8 +23,14 @@
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-ts": "^1.3.7",
+    "rollup-plugin-ts": "^3.0.2",
     "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "three": "^0.143.0"
+  },
+  "peerDependencies": {
+    "@types/three": "^0.143.2"
   },
   "scripts": {
     "commit": "npm run format && cz",
