--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "three-msdf-text",
   "repository": "SolalDR/three-msdf-text",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "browser": "dist/index.umd.js",
@@ -20,16 +20,17 @@
     "prettier": "^1.19.1",
     "rollup": "^2.77.1",
     "rollup-plugin-filesize": "^9.1.0",
+    "rollup-plugin-glslify": "^1.3.0",
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-ts": "^3.0.2",
-    "typescript": "^4.1.3"
-  },
-  "dependencies": {
-    "three": "^0.143.0"
+    "typescript": "^4.1.3",
+    "@rollup/plugin-json": "^4.1.0",
+    "rollup-plugin-serve": "^2.0.1"
   },
   "peerDependencies": {
+    "three": "^0.143.0",
     "@types/three": "^0.143.2"
   },
   "scripts": {
