--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.0.1",
     "@rollup/plugin-typescript": "^8.1.0",
     "@tsconfig/recommended": "^1.0.1",
@@ -23,24 +24,26 @@
     "rollup-plugin-glslify": "^1.3.0",
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-serve": "^2.0.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-ts": "^3.0.2",
     "typescript": "^4.1.3",
-    "@rollup/plugin-json": "^4.1.0",
-    "rollup-plugin-serve": "^2.0.1"
+    "rollup-plugin-copy": "^3.4.0",
+    "typedoc": "^0.23.14"
   },
   "peerDependencies": {
-    "three": "^0.143.0",
-    "@types/three": "^0.143.2"
+    "@types/three": "^0.143.2",
+    "three": "^0.143.0"
   },
   "scripts": {
     "commit": "npm run format && cz",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "build": "rollup -c",
+    "build": "rollup -c && npm run docs",
     "dev": "rollup -c -w",
     "test": "node test/test.js",
     "pretest": "npm run build",
-    "deploy": "npm run build && npm publish"
+    "deploy": "npm run build && npm publish",
+    "docs": "typedoc src/index.ts"
   },
   "files": [
     "dist"
