--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,9 +2,10 @@ name: CD
 
 on:
   workflow_dispatch:
+  pull_request:
   push:
     branches:
-      - develop
+      - master
 
 jobs:
   deploy:
@@ -19,21 +20,13 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
-      # - name: Install dependencies
-      #   run: pnpm install --frozen-lockfile=false
-      # - name: Publish
-      #   id: publish
-      #   uses: JS-DevTools/npm-publish@v1
-      #   with:
-      #     token: ${{ secrets.NPM_TOKEN }}
-      # - if: steps.publish.outputs.type != 'none'
-      #   run: |
-      #     echo "Version changed: ${{ steps.publish.outputs.old-version }} → ${{ steps.publish.outputs.version }}"
-      # - name: Deploy
-        # run: pnpm run deploy
       - uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
           folder: public
           target-folder: public
           single-commit: true
+      # - name: Publish to npm
+      #   uses: luvies/action-yarn-publish@v0.1.1
+      #   env:
+      #     NODE_AUTH_TOKEN: ${{ secrets.NODE_TOKEN }}
