--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,6 +31,7 @@ jobs:
         uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_AUTH_TOKEN }}
+          access: public
       # - name: Publish if version has been updated
       #   uses: pascalgn/npm-publish-action@1.3.8
       #   with: # All of theses inputs are optional
