ci(workflow): update workflow files

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,6 +31,7 @@ jobs:
         with:
           token: ${{ secrets.NPM_AUTH_TOKEN }}
           access: public
+          registry: 'https://registry.npmjs.com/'
       # - name: Publish if version has been updated
       #   uses: pascalgn/npm-publish-action@1.3.8
       #   with: # All of theses inputs are optional
