--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@solaldr/three-msdf-text",
   "repository": "SolalDR/three-msdf-text",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "main": "build/index.js",
   "module": "build/index.esm.js",
   "browser": "build/index.umd.js",
@@ -11,6 +11,7 @@
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.0.1",
+    "@rollup/plugin-replace": "^4.0.0",
     "@rollup/plugin-typescript": "^8.1.0",
     "@tsconfig/recommended": "^1.0.1",
     "@typescript-eslint/eslint-plugin": "3.9.1",
@@ -21,6 +22,8 @@
     "eslint-plugin-import": "^2.20.1",
     "prettier": "^1.19.1",
     "rollup": "^2.77.1",
+    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-external-globals": "^0.6.1",
     "rollup-plugin-filesize": "^9.1.0",
     "rollup-plugin-glslify": "^1.3.0",
     "rollup-plugin-node-resolve": "^4.0.0",
@@ -28,9 +31,8 @@
     "rollup-plugin-serve": "^2.0.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-ts": "^3.0.2",
-    "typescript": "^4.1.3",
-    "rollup-plugin-copy": "^3.4.0",
-    "typedoc": "^0.23.14"
+    "typedoc": "^0.23.14",
+    "typescript": "^4.1.3"
   },
   "peerDependencies": {
     "@types/three": "^0.143.2",
