chore(package.json): 0.0.17

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -32,3 +32,7 @@ jobs:
           token: ${{ secrets.NPM_AUTH_TOKEN }}
           access: public
           registry: 'https://registry.npmjs.com/'
+      - name: Auto tag
+        uses: Klemensas/action-autotag@1.2.3
+        with:
+          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
