chore(package.json): 0.0.18

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,8 +3,8 @@ name: CD Workflow
 on:
   workflow_dispatch:
   push:
-    tags:
-      - '**' # Push events to every tag including hierarchical tags like v1.0/beta
+    branches:
+      - master
 
 jobs:
   deploy:
