--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-ts": "^3.0.2",
     "typedoc": "^0.23.14",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "fs-extra": "^10.1.0"
   },
   "peerDependencies": {
     "@types/three": "0.140.0",
